--- a/dlnn.html
+++ b/dlnn.html
@@ -79,11 +79,12 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                        <h1 class="display-3 text-white animated slideInDown">Giới thiệu</h1>
+                        <h1 class="display-3 text-white animated slideInDown">Du lịch nước ngoài</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
-                                <li class="breadcrumb-item text-white active" aria-current="page">Giới thiệu</li>
+                                <li class="breadcrumb-item"><a href="#">Tour du lịch</a></li>
+                                <li class="breadcrumb-item text-white active" aria-current="page">Du lịch nước ngoài</li>
                             </ol>
                         </nav>
                     </div>
@@ -95,7 +96,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
@@ -132,12 +133,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- About End -->
 
 
     <!-- Team Start -->
-    <div class="container-xxl py-5">
+    <!-- <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Travel Guide</h6>
@@ -210,7 +211,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Team End -->
         
 
