--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
                     <a href="dltn.html" class="nav-item nav-link">Du lịch trong nước</a>
+                    <a href="dlnn.html" class="nav-item nav-link">Du lịch nước ngoài</a>
                     <!-- <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="package.html" class="nav-item nav-link">Packages</a>
                     <div class="nav-item dropdown">
