--- a/about.html
+++ b/about.html
@@ -53,22 +53,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
+                    <a href="index.html" class="nav-item nav-link">Trang chủ</a>
                     <a href="dltn.html" class="nav-item nav-link">Du lịch trong nước</a>
-                    <!-- <a href="dlnn.html" class="nav-item nav-link">Du lịch nước ngoài</a> -->
-                    <!-- <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="package.html" class="nav-item nav-link">Packages</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="destination.html" class="dropdown-item">Destination</a>
-                            <a href="booking.html" class="dropdown-item">Booking</a>
-                            <a href="team.html" class="dropdown-item">Travel Guides</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
-                        </div>
-                    </div> -->
-                    <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
+                    <a href="about.html" class="nav-item nav-link active">Giới thiệu</a>
                     <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
                 </div>
             </div>
