--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
+                    <a href="index.html" class="nav-item nav-link">Trang chủ</a>
                     <a href="dltn.html" class="nav-item nav-link">Du lịch trong nước</a>
                     <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
-                    <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+                    <a href="contact.html" class="nav-item nav-link active">Liên hệ</a>
                 </div>
             </div>
         </nav>
