--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>Ocean Trip</h1>
+                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i><span style="color:#FFFF;">Ocean </span><span style="color:#FE8800;">Trip</span></h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -96,8 +96,17 @@
                             <i class="fa fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="ms-3">
-                            <h5 class="text-primary">Address</h5>
+                            <h5 class="text-primary">Văn phòng tại HCM</h5>
                             <p class="mb-0">69/68 Đặng Thuỳ Trâm, Phường 13, Bình Thạnh, TP. Hồ Chí Minh</p>
+                        </div>
+                    </div>
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
+                            <i class="fa fa-map-marker-alt text-white"></i>
+                        </div>
+                        <div class="ms-3">
+                            <h5 class="text-primary">Văn phòng tại Hà Nội</h5>
+                            <p class="mb-0">32 Phố Lý Thái Tổ, Phường Hàng Trống, Quận Hoàn Kiếm, Hà Nội.</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-4">
