--- a/dltn-condao.html
+++ b/dltn-condao.html
@@ -90,13 +90,55 @@
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="img/dltn-nhatrang/dltn-nhatrang-1.jpg" class="d-block w-100" alt="...">
+                                    <img src="img/dltn-condao/dltn-condao-1.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="img/dltn-nhatrang/dltn-nhatrang-2.jpg" class="d-block w-100" alt="...">
+                                    <img src="img/dltn-condao/dltn-condao-2.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/dltn-nhatrang/dltn-nhatrang-3.jpg" class="d-block w-100" alt="...">
+                                    <img src="img/dltn-condao/dltn-condao-3.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-4.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-5.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-6.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-7.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-8.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-9.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-10.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-11.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-12.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-13.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-14.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-15.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-16.jpg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/dltn-condao/dltn-condao-17.jpg" class="d-block w-100" alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button"
