--- a/dltn-condao.html
+++ b/dltn-condao.html
@@ -43,7 +43,7 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
                 <h1 class="text-primary m-0"><i class="fa fa-map-marker me-3"></i><span style="color:#FFFF;">Ocean
                     </span><span style="color:#FE8800;">Trip</span></h1>
@@ -89,55 +89,52 @@
                     <div class="position-relative h-100">
                         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
-                                <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="img/dltn-condao/dltn-condao-1.jpg" class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item" data-bs-interval="2000">
+                                <div class="carousel-item active" data-bs-interval="1000">
                                     <img src="img/dltn-condao/dltn-condao-2.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-3.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-4.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-5.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-6.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-7.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-8.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-9.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-10.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-11.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-12.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-13.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-14.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-15.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-16.jpg" class="d-block w-100" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-bs-interval="2000">
                                     <img src="img/dltn-condao/dltn-condao-17.jpg" class="d-block w-100" alt="...">
                                 </div>
                             </div>
@@ -181,7 +178,7 @@
                 </div>
             </div>
             <div id="tour-con-dao">
-                <div class="card">
+                <!-- <div class="card">
                     <div class="card-header">
                         <h5 class="mb-0">
                             <a class="btn btn-link" data-bs-toggle="collapse" href="#mo-ta">
@@ -194,7 +191,7 @@
                             <p>Đi&nbsp;<strong>tour du lịch Côn Đảo 3N2Đ</strong></p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="card">
                     <div class="card-header">
                         <a class="btn btn-link collapsed" data-bs-toggle="collapse" href="#chuong-trinh">
