--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
                 <h1 class="text-primary m-0"><i class="fa fa-map-marker me-3"></i><span style="color:#FFFF;">Ocean </span><span style="color:#FE8800;">Trip</span></h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
