--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
-        <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+        <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
                 <h1 class="text-primary m-0"><i class="fa fa-map-marker me-3"></i><span style="color:#FFFF;">Ocean </span><span style="color:#FE8800;">Trip</span></h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
@@ -97,7 +97,7 @@
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>4 ngày 3 đêm</small>
                         </div>
                         <div class="text-center p-4">
-                            <h3 class="mb-0">4.390.000 VNĐ</h3>
+                            <h3 class="mb-0">5.850.000 VNĐ</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
@@ -105,9 +105,9 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p>Mộc Châu - Sơn La - Cao Bằng</p>
+                            <p>Hà Nội - Mộc Châu - Phú Thọ</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="dltn-nhatrang.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="dltn-hn-mochcau-phutho.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
@@ -120,8 +120,8 @@
                         </div>
                         <div class="d-flex border-bottom">
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-map-marker text-primary me-2"></i>Hà Nội</small>
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>3 days</small>
-                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>2 Person</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>12/06/2025</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>3 ngày 2 đêm</small>
                         </div>
                         <div class="text-center p-4">
                             <h3 class="mb-0">3.290.000 VNĐ</h3>
@@ -134,7 +134,7 @@
                             </div>
                             <p>Phú Yên - Bình Định</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="dltn-phuyen-binhdinh.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
