--- a/dltn-hn-mochcau-phutho.html
+++ b/dltn-hn-mochcau-phutho.html
@@ -95,7 +95,7 @@
                                         class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="img/dltn-hn-mocchau-phutho/dltn-hn-mocchau-phutho-2.jpg"
+                                    <img src="img/dltn-hn-mocchau-phutho/dltn-hn-mocchau-phutho-2.png"
                                         class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
