add new mem + edit

--- a/about.html
+++ b/about.html
@@ -172,22 +172,22 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-kinh-doanh.jpg" alt="" style="height: 350px;object-fit: fill;">
+                            <img class="img-fluid" src="img/team-mem/pho-giam-doc.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-0">Nguyễn Hồng Hân</h5>
-                            <small>Trưởng phòng <strong>Kinh Doanh</strong></small>
+                            <small>Phó <strong>Giám Đốc</strong></small>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-dieu-hanh.jpg" alt="" style="height: 350px;object-fit: fill;">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-kinh-doanh-va-sale.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Mai thị ánh tuyết</h5>
-                            <small>Trưởng phòng <strong>Điều Hành</strong></small>
+                            <h5 class="mb-0">Võ Viết Lý</h5>
+                            <small>Trưởng phòng <strong>Kinh Doanh & Sale</strong></strong></small>
                         </div>
                     </div>
                 </div>
@@ -203,6 +203,17 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="team-item">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-dieu-hanh.jpg" alt="" style="height: 350px;object-fit: fill;">
+                        </div>
+                        <div class="text-center p-4">
+                            <h5 class="mb-0">Mai Thị Ánh Tuyết</h5>
+                            <small>Trưởng phòng <strong>Điều Hành</strong></small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
                     <div class="team-item">
                         <div class="overflow-hidden">
                             <img class="img-fluid" src="img/team-mem/truong-phong-huong-dan-vien.jpg" alt="" style="height: 350px;object-fit: fill;">
